--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,7 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-<h1>Hello coursera!! I am postive that it's a good start for me</h1>
+<h1>Hello coursera!!
+</h1>
 </body>
 </html>
